@@ -102,7 +102,7 @@ jobs:
       image: opensuse/leap:latest
     steps:
       - name: Install dependencies
-        run: zypper --non-interactive --no-gpg-checks in tar gzip gcc gcc-c++ git make php valgrind libX11-devel libXrandr-devel libjack-devel cairo-devel freetype2-devel libsndfile-devel
+        run: zypper --non-interactive --no-gpg-checks in tar gzip gcc gcc-c++ git make php valgrind libX11-devel libXrandr-devel Mesa-libGL-devel libjack-devel cairo-devel freetype2-devel libsndfile-devel
       - uses: actions/checkout@v3
       - name: Configure project
         run: make config VERBOSE=1 FEATURES='clap doc jack ladspa lv2 vst2 xdg' PREFIX=/usr
@@ -119,7 +119,7 @@ jobs:
       image: opensuse/tumbleweed:latest
     steps:
       - name: Install dependencies
-        run: zypper --non-interactive --no-gpg-checks in tar gzip gcc gcc-c++ clang lld git make php8-cli valgrind libstdc++-devel libX11-devel libXrandr-devel libjack-devel cairo-devel freetype2-devel libsndfile-devel
+        run: zypper --non-interactive --no-gpg-checks in tar gzip gcc gcc-c++ clang lld git make php8-cli valgrind libstdc++-devel libX11-devel libXrandr-devel Mesa-libGL-devel libjack-devel cairo-devel freetype2-devel libsndfile-devel
       - uses: actions/checkout@v3
       - name: Configure project
         run: make config CC=clang CXX=clang++ VERBOSE=1 FEATURES='clap doc jack ladspa lv2 vst2 xdg' PREFIX=/usr
@@ -148,6 +148,7 @@ jobs:
         run: make VERBOSE=1
       - name: Install binaries
         run: make install
+
   windows_mingw64:
     runs-on: windows-2022
     defaults:
